code fixes